procedural_macro/tests/fixtures/fail_missing_attr.rs
use procedural_macro::RetryCalculation;

#[derive(RetryCalculation)]
struct Missing;